--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "dependencies": {
     "chai": "^3.5.0",
     "discord.js": "^11.0.0",
+    "erlpack": "^0.1.2",
     "install": "^0.8.7",
     "mocha": "^3.2.0",
-    "npm": "^4.3.0"
+    "node-opus": "^0.3.0",
+    "npm": "^4.3.0",
+    "opusscript": "0.0.6",
+    "puppeteer": "^1.4.0",
+    "uws": "^10.148.0"
   }
 }
