feat(chrome) : test bot

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "uws": "^10.148.0"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "mocha": "^3.5.3",
-    "chai": "^3.5.0"
+    "sinon": "^5.0.7"
   }
 }
