--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "caretaker": "github:UtopiaRPG/caretaker",
     "discord.js": "^11.0.0",
     "erlpack": "^0.1.2",
+    "knex": "^0.14.6",
+    "mysql": "^2.15.0",
     "node-opus": "^0.3.0",
     "opusscript": "0.0.6",
     "puppeteer": "^1.4.0",
