--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "./node_modules/mocha/bin/mocha  test/**.js --timeout 50000 --exit"
   },
   "dependencies": {
+    "arangojs": "^6.6.0",
     "caretaker": "github:UtopiaRPG/caretaker",
     "discord.js": "^11.0.0",
     "erlpack": "^0.1.2",
