--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "caretaker": "github:UtopiaRPG/caretaker",
     "discord.js": "^11.0.0",
     "erlpack": "^0.1.2",
+    "express": "^4.16.3",
     "knex": "^0.14.6",
     "mysql": "^2.15.0",
     "node-opus": "^0.3.0",
     "opusscript": "0.0.6",
     "puppeteer": "^1.4.0",
+    "uuid": "^3.3.2",
     "uws": "^10.148.0"
   },
   "devDependencies": {
