--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "utopiaBot",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": false,
   "scripts": {
     "start": "node main.js",
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "arangojs": "^6.6.0",
-    "caretaker": "github:UtopiaRPG/caretaker",
+    "caretaker": "github:UtopiaRPG/caretaker#master",
     "discord.js": "^11.0.0",
     "erlpack": "^0.1.2",
     "express": "^4.16.3",
