--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "1.0.0",
   "private": false,
   "scripts": {
-    "start": "node main.js",
+    "start": "NODE_TLS_REJECT_UNAUTHORIZED=0 node main.js",
     "test": "./node_modules/mocha/bin/mocha  test/**.js --timeout 50000 --exit"
   },
   "dependencies": {
-    "caretaker": "github:UtopiaRPG/caretaker",
     "discord.js": "^11.0.0",
     "erlpack": "^0.1.2",
-    "knex": "^0.14.6",
     "mysql": "^2.15.0",
     "node-opus": "^0.3.0",
     "opusscript": "0.0.6",
     "puppeteer": "^1.4.0",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.7",
     "uws": "^10.148.0"
   },
   "devDependencies": {
